# JobSage

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENCE  README.md  dashboard.html  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
config/: config.toml  config_GUI.py  settings.py
config/control_panel/: api.py  control-panel.js  index.html
data/curated/: cleaned_careerjet.json  cleaned_rozee.json
data/raw/: careerjet.json  rozee.json
scripts/: run_analytics_api.py  run_loaders.py  sched.py  scheduler.py
src/analytics/: __init__.py  main_analyzer.py
src/api/: __init__.py  api_app.py
src/extractors/: base.py  careerjet.py  roles.py  rozee.py
src/loaders/: main_loader.py
src/transformers/: careerjet_cleaner.py  main_transformer.py  rozee_cleaner.py  soft_skills.py
src/utils/: __init__.py  error_handler.py
